TAG: qcreports_db-3-5-1-40
TAG: qcreports_db-3-5-1-39
DATE: 01/23/2007
STAFF: lec
CHANGES:
1) TR8120; MGI_MappedFeatures.py
2) TR8121; MGI_RepSequences.py

TAG: qcreports_db-3-5-1-38
DATE: 01/22/2007
STAFF: lec
CHANGES:
1) MRK_ENSEMBL.py, MRK_VEGA.py; added row counts

TAG: qcreports_db-3-5-1-37
DATE: 01/19/2007
STAFF: sc
CHANGES:
1)qcr.html -updated path to index.html. We started putting logs etc
  in /data/downloads, but never updated qcr.html

TAG: qcreports_db-3-5-1-36
DATE: 01/16/2007
STAFF: lec
CHANGES:
1) MRK_ENSEMBL.py, MRK_VEGA.py

TAG: qcreports_db-3-5-1-35
TAG: qcreports_db-3-5-1-34
DATE: 01/04/2007
STAFF: lec
CHANGES:
1) goStats.sh; fix header

TAG: qcreports_db-3-5-1-33
DATE: 12/18/2006
STAFF: lec
CHANGES:
1) TR8063; GXD_SpecTheilerAge.py

TAG: qcreports_db-3-5-1-32
DATE: 12/12/2006
STAFF: lec
CHANGES: add row count to top of GXD reports

TAG: qcreports_db-3-5-1-31
TAG: qcreports_db-3-5-1-30
DATE: 12/11/2006
STAFF: lec
CHANGES:
1) pirsfload

TAG: qcreports_db-3-5-1-29
DATE: 12/07/2006
STAFF: lec
CHANGES:
1) GXD_ExpPresNotPres.py

TAG: qcreports_db-3-5-1-28
DATE: 12/04/2006
STAFF: lec
CHANGES:
1) GXD_ImageCheck.sql

TAG: qcreports_db-3-5-1-27
DATE: 11/28/2006
STAFF: lec
CHANGES:
1) GXD_FullCodeGene.sql

TAG: qcreports_db-3-5-1-26
DATE: 11/16/2006
STAFF: sc
CHANGES:
1) qcr.html - updated path to index.html for all loads

TAG: qcreports_db-3-5-1-25
TAG: qcreports_db-3-5-1-24
DATE: 11/15/2006
STAFF: lec
CHANGES:
1) TR8001: TIGR to DFCI
2) mgiconfig FTP 

TAG: qcreports_db-3-5-1-23
DATE: 11/14/2006
STAFF: lec
CHANGES:
1) TR8001: TIGR to DFCI

TAG: qcreports_db-3-5-1-22
DATE: 11/09/2006
STAFF: lec
CHANGES:
1) change param list for msp/runQC.csh, seqload/runQC.csh

TAG: qcreports_db-3-5-1-21
DATE: 11/07/2006
STAFF: lec
CHANGES:
1) TR8015/VOC_GOObsolete.py

TAG: qcreports_db-3-5-1-20
TAG: qcreports_db-3-5-1-19
DATE: 11/06/2006
STAFF: lec
CHANGES:
1) TR8007/MLD_Triage.sql

TAG: qcreports_db-3-5-1-18
DATE: 11/01/2006
STAFF: lec
CHANGES:
1) fix triage reports
