@@ -258,6 +258,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/ACC_GenBank.sql.rpt">All GenBank IDs in MGI Associated with a Molecular Segment or Mouse Gene</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MGI_GTGUP.gff">MGI coordinates for the gene trap/gene unification pipeline (in GFF format)</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MGI_RepSequences.rpt">Markers and their Representative Genomic Sequence ID</A>
+<LI><A HREF="/data/reports/qcreports_db/output/SEQ_NoMarker.sql.rpt">NM Sequences that are not associated with a MGI Marker</A>
 </OL>
 
 <A NAME="sequence"><B>Sequences</B></A>
