@@ -1,3 +1,9 @@
+TAG: qcreports_db-3-5-1-41
+DATE: 01/24/2007
+STAFF: lec
+CHANGES:
+1) SEQ_NoMarker.sql; NM Sequences that are not associated with a MGI Marker
+
 TAG: qcreports_db-3-5-1-40
 TAG: qcreports_db-3-5-1-39
 DATE: 01/23/2007
